fixed overflowing sidepanel mix search results

--- a/app/styles/extra.scss
+++ b/app/styles/extra.scss
@@ -20,7 +20,8 @@
 	left: 88px;
 }
 
-.top50 #featured {
+.top50 #featured,
+.subscribe #featured, {
 	display: none;
 }
 
