--- a/app/styles/sidepanel.scss
+++ b/app/styles/sidepanel.scss
@@ -122,7 +122,6 @@
 
 #search-results.sidepanel>div {
 	margin-bottom: 24px;
-	height: 94px;
 	width: auto;
 	padding: 0 32px;
 }
